# SGM-Reverb

./: .gitignore  CMakeLists.txt  README.md
Installer/: License.rtf  Product.wxs  build-installer.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEngine.cpp  ReverbEngine.h
